fixed alignment issue for fullscreen

--- a/contact.css
+++ b/contact.css
@@ -189,7 +189,7 @@ ul.login {
     margin-top: 13px;
     padding-bottom: 30px;
     width: 748px;
-    padding-left: 292px;
+    padding-left: 324px;
    }
 
    .bottom-form {
